chore: remove auth
