# go/api/openapi.yaml
@@ -165,26 +165,6 @@ components:
         - align
         - display
       type: object
-    LoginRequestBody:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          examples:
-            - https://example.com/schemas/LoginRequestBody.json
-          format: uri
-          readOnly: true
-          type: string
-        password:
-          description: Password
-          type: string
-        username:
-          description: Username
-          type: string
-      required:
-        - username
-        - password
-      type: object
     SSEOperation:
       enum:
         - create
@@ -212,21 +192,6 @@ components:
       properties:
         Data:
           $ref: "#/components/schemas/Team"
-        Id:
-          format: int64
-          type: integer
-        Operation:
-          $ref: "#/components/schemas/SSEOperation"
-      required:
-        - Operation
-        - Id
-        - Data
-      type: object
-    SSEUpdateUser:
-      additionalProperties: false
-      properties:
-        Data:
-          $ref: "#/components/schemas/User"
         Id:
           format: int64
           type: integer
@@ -284,76 +249,6 @@ components:
         - id
         - name
       type: object
-    User:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          examples:
-            - https://example.com/schemas/User.json
-          format: uri
-          readOnly: true
-          type: string
-        email:
-          type: string
-        id:
-          format: int32
-          type: integer
-        role:
-          $ref: "#/components/schemas/UserRole"
-        username:
-          type: string
-      required:
-        - id
-        - username
-        - email
-        - role
-      type: object
-    UserPatch:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          examples:
-            - https://example.com/schemas/UserPatch.json
-          format: uri
-          readOnly: true
-          type: string
-        email:
-          type: string
-        role:
-          $ref: "#/components/schemas/UserRole"
-        username:
-          type: string
-      type: object
-    UserPut:
-      additionalProperties: false
-      properties:
-        $schema:
-          description: A URL to the JSON Schema for this object.
-          examples:
-            - https://example.com/schemas/UserPut.json
-          format: uri
-          readOnly: true
-          type: string
-        email:
-          type: string
-        role:
-          $ref: "#/components/schemas/UserRole"
-        username:
-          type: string
-      required:
-        - username
-        - email
-        - role
-      type: object
-    UserRole:
-      enum:
-        - admin
-        - user
-        - guest
-      title: UserRole
-      type: string
     WallpaperLayout:
       additionalProperties: false
       properties:
@@ -388,245 +283,6 @@ info:
   version: 2.0.0
 openapi: 3.1.0
 paths:
-  /api/auth/dev/login:
-    post:
-      description: Login into an admin account without credentials in development
-      operationId: devLogin
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-          description: OK
-          headers:
-            Set-Cookie:
-              schema:
-                type: string
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Dev login
-      tags:
-        - auth
-  /api/auth/login:
-    post:
-      operationId: login
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/LoginRequestBody"
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-          description: OK
-          headers:
-            Set-Cookie:
-              schema:
-                type: string
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Login
-      tags:
-        - auth
-  /api/auth/logout:
-    post:
-      operationId: logout
-      responses:
-        "204":
-          description: No Content
-          headers:
-            Set-Cookie:
-              schema:
-                type: string
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Logout
-      tags:
-        - auth
-  /api/auth/oidc/callback:
-    get:
-      operationId: oidcCallback
-      parameters:
-        - explode: false
-          in: query
-          name: code
-          schema:
-            type: string
-        - explode: false
-          in: query
-          name: state
-          schema:
-            type: string
-        - in: cookie
-          name: oidc_state
-          schema:
-            type: string
-        - in: cookie
-          name: oidc_nonce
-          schema:
-            type: string
-      responses:
-        "302":
-          description: Found
-          headers:
-            Domain:
-              schema:
-                type: string
-            Expires:
-              schema:
-                type: string
-            HttpOnly:
-              schema:
-                type: boolean
-            Location:
-              schema:
-                type: string
-            MaxAge:
-              schema:
-                format: int64
-                type: integer
-            Name:
-              schema:
-                type: string
-            Partitioned:
-              schema:
-                type: boolean
-            Path:
-              schema:
-                type: string
-            Quoted:
-              schema:
-                type: boolean
-            Raw:
-              schema:
-                type: string
-            RawExpires:
-              schema:
-                type: string
-            SameSite:
-              schema:
-                format: int64
-                type: integer
-            Secure:
-              schema:
-                type: boolean
-            Set-Cookie:
-              schema:
-                type: string
-            Unparsed:
-              schema:
-                type: string
-            Value:
-              schema:
-                type: string
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: OIDC callback
-      tags:
-        - auth
-  /api/auth/oidc/enabled:
-    get:
-      description: Returns 204 when oidc is enabled, 404 otherwise
-      operationId: oidcEnabled
-      responses:
-        "204":
-          description: No Content
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: OIDC enabled check
-      tags:
-        - auth
-  /api/auth/oidc/login:
-    get:
-      operationId: oidcLogin
-      responses:
-        "302":
-          description: Found
-          headers:
-            Domain:
-              schema:
-                type: string
-            Expires:
-              schema:
-                type: string
-            HttpOnly:
-              schema:
-                type: boolean
-            Location:
-              schema:
-                type: string
-            MaxAge:
-              schema:
-                format: int64
-                type: integer
-            Name:
-              schema:
-                type: string
-            Partitioned:
-              schema:
-                type: boolean
-            Path:
-              schema:
-                type: string
-            Quoted:
-              schema:
-                type: boolean
-            Raw:
-              schema:
-                type: string
-            RawExpires:
-              schema:
-                type: string
-            SameSite:
-              schema:
-                format: int64
-                type: integer
-            Secure:
-              schema:
-                type: boolean
-            Set-Cookie:
-              schema:
-                type: string
-            Unparsed:
-              schema:
-                type: string
-            Value:
-              schema:
-                type: string
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: OIDC login
-      tags:
-        - auth
   /api/clients/:
     get:
       operationId: listClients
@@ -795,24 +451,6 @@ paths:
                       type: object
                     - properties:
                         data:
-                          $ref: "#/components/schemas/SSEUpdateUser"
-                        event:
-                          const: getUser
-                          description: The event name.
-                          type: string
-                        id:
-                          description: The event ID.
-                          type: integer
-                        retry:
-                          description: The retry time in milliseconds.
-                          type: integer
-                      required:
-                        - data
-                        - event
-                      title: Event getUser
-                      type: object
-                    - properties:
-                        data:
                           $ref: "#/components/schemas/InitMessage"
                         event:
                           const: initMessage
@@ -943,140 +581,6 @@ paths:
       summary: Set team client
       tags:
         - teams
-  /api/users/:
-    get:
-      operationId: listUsers
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                items:
-                  $ref: "#/components/schemas/User"
-                type: array
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Get all users
-      tags:
-        - users
-  /api/users/me:
-    get:
-      operationId: getCurrentUser
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Get the current logged in user
-      tags:
-        - users
-  /api/users/{id}:
-    get:
-      operationId: getUser
-      parameters:
-        - description: User ID
-          in: path
-          name: id
-          required: true
-          schema:
-            description: User ID
-            format: int32
-            type: integer
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Get a user by id
-      tags:
-        - users
-    patch:
-      operationId: patchUser
-      parameters:
-        - description: User ID
-          in: path
-          name: id
-          required: true
-          schema:
-            description: User ID
-            format: int32
-            type: integer
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserPatch"
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Patch a user
-      tags:
-        - users
-    put:
-      operationId: putUser
-      parameters:
-        - description: User ID
-          in: path
-          name: id
-          required: true
-          schema:
-            description: User ID
-            format: int32
-            type: integer
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/UserPut"
-        required: true
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-          description: OK
-        default:
-          content:
-            application/problem+json:
-              schema:
-                $ref: "#/components/schemas/ErrorModel"
-          description: Error
-      summary: Create or replace a user by id
-      tags:
-        - users
   /api/wallpapers/{id}/file:
     delete:
       description: If the file does not exist, returns succesfully
