# go/internal/http-server/models/user.put.go
@@ -1,9 +1,0 @@
-package models
-
-import "github.com/LuukBlankenstijn/fogistration/internal/shared/database/models"
-
-type UserPut struct {
-	Username string          `json:"username"`
-	Email    string          `json:"email"`
-	Role     models.UserRole `json:"role"`
-}
